# birdnames

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  fetch_bbl_data.py  ingest_taxonomies.py  planning_doc.md  pyproject.toml
birdnames/: __init__.py  converter.py  utils.py
birdnames/data/: available_taxonomies.csv
birdnames/data/processed/: bbl_2025_taxonomy.csv  ebird_2022_taxonomy.csv  ebird_2024_taxonomy.csv
birdnames/sources/: __init__.py
data/processed/: avilist_taxonomy.csv  bbl_2024_taxonomy.csv  birdlife_2024_taxonomy.csv  ebird_2021_taxonomy.csv  ebird_2022_taxonomy.csv  ebird_2023_taxonomy.csv  ebird_2024_taxonomy.csv  ibp_2024_taxonomy.csv
data_ingestion/: fetch_bbl_data.py  ingest_taxonomies.py
src/birdnames/: __init__.py  converter.py  utils.py
src/birdnames/sources/: __init__.py
taxonomies/: HBW_BirdLife_List of Birds_v.9.xlsx  IBP-AOS-LIST24.csv
tests/: test_converter.py
